--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,11 +125,48 @@ body {
     font-size: 18px;
     color: #555;
   }
-  
+
+  /* 모달 전체 레이어 */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  transition: opacity 0.3s ease;
+}
+
+/* 숨겨진 상태 */
+.hidden {
+  display: none;
+}
+
+/* 모달 박스 */
+.modal-content {
+  background: white;
+  padding: 30px 40px;
+  border-radius: 16px;
+  width: 320px;
+  max-height: 70vh;
+  overflow-y: auto;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+  text-align: center;
+}
+
+.modal-content h2 {
+  margin-bottom: 16px;
+  font-size: 22px;
+}
+
 
   #slotWrapper {
     width: 500px;
-    height: 100px;
+    height: 200px;
     margin: 20px auto;
     border: 3px solid #000;
     overflow: hidden;
@@ -145,7 +182,7 @@ body {
   }
   
   #slot div {
-    height: 100px;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
