--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 body {
-    /* background: linear-gradient(135deg, #f6f8fc, #e0e4f1); */
-    
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-color: #000;
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -10,11 +11,11 @@ body {
   }
   
   body.index {
-    background: url('../../images/daily_bg.gif') no-repeat center center fixed;
+    background: url('../../images/daily_bg.gif');
   }
   
   body.monthly {
-    background: url('../../images/monthly_bg.gif') no-repeat center center fixed;
+    background: url('../../images/monthly_bg.gif');
   }
 
   .container {
